# multiversx-hackathon-artifacts

./: README.md
Adder-Verification/: .gitignore  README.md  _CoqProject  dune-project  rust-ursus.opam
Adder-Verification/ref/: adder.rs  adder.rs.ast
Adder-Verification/src/: Adder.v  Containers.v  dune
Crowdfunding/: crowdfunding.v
Crowdfunding/spec/: Crowdfunding.drawio  Crowdfunding.md
Rust-Ursus-Translator/: .gitignore  .gitmodules  Makefile  README.md  _CoqProject  dune-project  rust-ursus-translator.opam
Rust-Ursus-Translator/src/: Main.v  ProgramScheme.v  UtilityFunctions.v  dune
RustAST/: Cargo.toml  Dockerfile  README.md
RustAST/src/: main.rs
RustVM/: Func.v  Notations.v  Types.v  stdTypes.v
